force-app/main/default/objects/SOLXYZCSO001__ReportDefinitionHistory__c/SOLXYZCSO001__ReportDefinitionHistory__c.object-meta.xml
<CustomObject>
    <description>Manage the item change hisotry of a report definition</description>
    <label>帳票定義履歴</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>帳票定義履歴ＩＤ</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>