force-app/main/default/objects/SOLXYZCSO001__ReportDefinitionHistory__c/fields/SOLXYZCSO001__OriginalID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OriginalID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元履歴ID</label>
    <referenceTo>SOLXYZCSO001__ReportDefinitionHistory__c</referenceTo>
    <relationshipLabel>帳票定義履歴</relationshipLabel>
    <relationshipName>RDHdWXM</relationshipName>
    <type>Lookup</type>
</CustomField>